--- a/TeamWorkWebApp/TeamWorkWebApp.csproj
+++ b/TeamWorkWebApp/TeamWorkWebApp.csproj
@@ -20,4 +20,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\SVG\crown.png" />
+  </ItemGroup>
+
 </Project>
